# ESP-Firmware-Over-The-Air

./: .clang-format  .editorconfig  .editorconfig-checker.json  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: lint.yml  pytest.yml
backend/: .env.example  README.md  alembic.ini  config.py  main.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_users_users_table.py  0003_unique_firmware_model_version.py
backend/api/: deps.py  routes.py
backend/application/: auth.py  check_update.py  upload_firmware.py
backend/domain/: auth.py  firmware_image.py  models.py  signing.py
backend/infrastructure/: db.py  local_storage.py  sqlite_repo.py
backend/ports/: repository.py  storage.py
backend/scripts/: create_user.py  generate_keys.py  generate_tls_cert.py
backend/tests/: conftest.py  test_auth.py  test_auth_routes.py  test_check_update.py  test_config.py  test_firmware_image.py  test_local_storage.py  test_routes.py  test_signing.py  test_sqlite_repo.py  test_upload_firmware.py
docs/: CONTRIBUTING.md  HANDOFF.md  ROADMAP.md  TEAM_GUIDELINES.md
esp32/main/: LittleFSTest.h  main.ino  ota.cpp  ota.h  partitions.csv
frontend/: .env.example  README.md  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/auth/: AuthProvider.tsx  context.ts
frontend/src/pages/: DeviceList.css  DeviceList.tsx  FirmwareList.css  FirmwareList.tsx  FirmwareUpload.css  FirmwareUpload.tsx  Login.css  Login.tsx
python/: configs.toml  server.py  utils.py
python/blueprints/: api.py  firmware.py
