[project]
name = "esp-firmware-over-the-air"
version = "0.1.0"
description = "ESP32 Firmware Over-The-Air update system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=49.0.0",
    "flask>=3.0.0",
]

[dependency-groups]
dev = [
    "black>=24.0.0",
    "pre-commit>=3.6.0",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'
